--- a/pages/projects/ebullition.html
+++ b/pages/projects/ebullition.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="/images/iconWebsite.png" />
@@ -10,6 +12,7 @@
     <title>Tom Wainberg - Ébullition</title>
     <script defer src="/js/iframeResize.js"></script>
 </head>
+
 <body>
     <header>
         <nav>
@@ -36,9 +39,10 @@
     <section id="project-page-title">
         <h1><span>(vidéo) </span>Ébullition</h1>
         <p>
-            Nous avons écrit, tourné puis monté l’épisode pilote d’une émission culturelle. Le résultat ? Ébullition, avec comme premier sujet la fatalité (supposée) de l’ennui !            
+            Nous avons écrit, tourné puis monté l’épisode pilote d’une émission culturelle. Le résultat ? Ébullition,
+            avec comme premier sujet la fatalité (supposée) de l’ennui !
         </p>
-       
+
         <p>
             Tout cela a été réalisé dans un délai de 8 jours, dans le cadre de la formation MMI (mars 2024).
         </p>
@@ -47,25 +51,37 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ebullition-1.webp);background-size: contain;"></div>
+            <div class="background-image"
+                style="background-image: url(/images/projets/ebullition-1.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">Notre objectif était de créer du contenu permettant de stimuler la réflexion et l'introspection auprès d’un public jeune. À travers une approche de vulgarisation, nous abordons des concepts qui, bien qu’abstraits au premier abord, sont omniprésents et occupent une place importante dans notre quotidien.
-                </p>
-            </div>
-        </div>
-
-                <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ebullition-2.webp);background-size: contain;"></div>
-            <div class="text">
-                <p class="text">Tout au long de l’épisode, nous avons abordé plusieurs sujets, ce qui nous a permis de varier les formats de présentation. Par exemple, un sujet a été illustré à travers un plan-séquence, un autre a été entièrement tourné sur fond vert pour immerger le présentateur dans différentes œuvres, et des interviews ont été réalisées pour enrichir le propos avec des points de vue extérieurs.
+                <p class="text">Notre objectif était de créer du contenu permettant de stimuler la réflexion et
+                    l'introspection auprès d’un public jeune. À travers une approche de vulgarisation, nous abordons des
+                    concepts qui, bien qu’abstraits au premier abord, sont omniprésents et occupent une place importante
+                    dans notre quotidien.
                 </p>
             </div>
         </div>
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ebullition-3.webp);;background-size: contain;"></div>
+            <div class="background-image"
+                style="background-image: url(/images/projets/ebullition-2.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">J'ai été réalisateur, co-auteur et co-monteur de ce premier épisode, et je suis très fier du résultat. Le passage du texte à l'image est généralement le plus délicat, et malgré un délai de production assez court, nous avons réussi à produire un contenu qui nous plaisait tous.
+                <p class="text">Tout au long de l’épisode, nous avons abordé plusieurs sujets, ce qui nous a permis de
+                    varier les formats de présentation. Par exemple, un sujet a été illustré à travers un plan-séquence,
+                    un autre a été entièrement tourné sur fond vert pour immerger le présentateur dans différentes
+                    œuvres, et des interviews ont été réalisées pour enrichir le propos avec des points de vue
+                    extérieurs.
+                </p>
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="background-image"
+                style="background-image: url(/images/projets/ebullition-3.webp);;background-size: contain;"></div>
+            <div class="text">
+                <p class="text">J'ai été réalisateur, co-auteur et co-monteur de ce premier épisode, et je suis très
+                    fier du résultat. Le passage du texte à l'image est généralement le plus délicat, et malgré un délai
+                    de production assez court, nous avons réussi à produire un contenu qui nous plaisait tous.
 
                 </p>
             </div>
@@ -73,25 +89,31 @@
 
         <section id="project-page-title">
             <p>
-                <p>
-                    Avec (par ordre d'apparition sur la photo ci-dessus) : 
-                    <a href="https://www.linkedin.com/in/no%C3%A9mie-nu%C3%B1ez-b4698b294/" target="_blank">Noémie Nuñez</a>, 
-                    <a href="https://fr.linkedin.com/in/mathis-dumon-b8a98b294" target="_blank">Mathis Dumon</a>, 
-                    <a href="https://fr.linkedin.com/in/simon-daguet-kargl" target="_blank">Simon Daguet-Kargl</a>, 
-                    notre invité, 
-                    <a href="https://fr.linkedin.com/in/roxane-horchower-558a6628a" target="_blank">Roxane Horchower</a>, 
-                    <a href="https://fr.linkedin.com/in/justine-gelis-559989294" target="_blank">Justine Gelis</a>, 
-                    <a href="https://fr.linkedin.com/in/brice-br%C3%A9art-008450295" target="_blank">Brice Bréart</a>, 
-                    moi-même, 
-                    <a href="https://fr.linkedin.com/in/ad%C3%A8le-beaune-132985268" target="_blank">Adèle Beaune</a>, 
-                    <a href="https://fr.linkedin.com/in/gwena%C3%ABlle-yau-chun-wan-3a3826299" target="_blank">Gwenaëlle Yau-Chun-Wan</a>, 
-                    et enfin 
-                    <a href="https://fr.linkedin.com/in/c%C3%A9sar-morel" target="_blank">César Morel</a>.
-                </p></section>
+            <p>
+                Avec (par ordre d'apparition sur la photo ci-dessus) :
+                <a href="https://www.linkedin.com/in/no%C3%A9mie-nu%C3%B1ez-b4698b294/" target="_blank">Noémie
+                    Nuñez</a>,
+                <a href="https://fr.linkedin.com/in/mathis-dumon-b8a98b294" target="_blank">Mathis Dumon</a>,
+                <a href="https://fr.linkedin.com/in/simon-daguet-kargl" target="_blank">Simon Daguet-Kargl</a>,
+                notre invité,
+                <a href="https://fr.linkedin.com/in/roxane-horchower-558a6628a" target="_blank">Roxane Horchower</a>,
+                <a href="https://fr.linkedin.com/in/justine-gelis-559989294" target="_blank">Justine Gelis</a>,
+                <a href="https://fr.linkedin.com/in/brice-br%C3%A9art-008450295" target="_blank">Brice Bréart</a>,
+                moi-même,
+                <a href="https://fr.linkedin.com/in/ad%C3%A8le-beaune-132985268" target="_blank">Adèle Beaune</a>,
+                <a href="https://fr.linkedin.com/in/gwena%C3%ABlle-yau-chun-wan-3a3826299" target="_blank">Gwenaëlle
+                    Yau-Chun-Wan</a>,
+                et enfin
+                <a href="https://fr.linkedin.com/in/c%C3%A9sar-morel" target="_blank">César Morel</a>.
+            </p>
+        </section>
 
         <div class="video">
             <p>Ébullition - L'ennui est-il une fatalité ? :</p>
-            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/I9My_hI-t4w?si=nkNOg7LEX996ejeU" title="L'Ennui" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 10px"></iframe>
+            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/I9My_hI-t4w?si=nkNOg7LEX996ejeU"
+                title="L'Ennui" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 10px"></iframe>
         </div>
 
         <div class="boutons-back">
@@ -102,7 +124,11 @@
     </section>
 
     <footer>
-        <p>&copy; Tom WAINBERG, 2024</p>
+        <p>&copy; Tom WAINBERG, <span id="date">2025</span> - <a href="/pages/legals.html">Mentions légales</a></p>
     </footer>
+    <script>
+        document.getElementById('date').innerHTML = new Date().getFullYear();
+    </script>
 </body>
+
 </html>
