--- a/pages/projects/lordre.html
+++ b/pages/projects/lordre.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="icon" href="/images/iconWebsite.png" />
@@ -10,6 +12,7 @@
     <title>Tom Wainberg - L'Ordre</title>
     <script defer src="/js/iframeResize.js"></script>
 </head>
+
 <body>
     <header>
         <nav>
@@ -36,8 +39,9 @@
     <section id="project-page-title">
         <h1><span>(vidéo) </span>L'Ordre</h1>
         <p>
-            Pour répondre au thème imposé, "sous-marin de guerre", nous avons réalisé un court-métrage en explorant les tensions humaines dans un cadre confiné. </p>
-       
+            Pour répondre au thème imposé, "sous-marin de guerre", nous avons réalisé un court-métrage en explorant les
+            tensions humaines dans un cadre confiné. </p>
+
         <p>
             Tout cela a été réalisé dans un délai de 8 jours, dans le cadre de la formation MMI (octobre 2024).
         </p>
@@ -46,42 +50,57 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ordre-1.webp);background-size: contain;"></div>
+            <div class="background-image"
+                style="background-image: url(/images/projets/ordre-1.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">Le processus d’écriture a été guidé par des œuvres de référence : Le Chant du Loup a inspiré la réalisation, tandis que Twelve Angry Men a servi de modèle pour les dialogues et la tension permanente en huis-clos. Nous avons porté une attention particulière à l’authenticité visuelle, en intégrant de véritables uniformes et accessoires de gendarmes. 
+                <p class="text">Le processus d’écriture a été guidé par des œuvres de référence : Le Chant du Loup a
+                    inspiré la réalisation, tandis que Twelve Angry Men a servi de modèle pour les dialogues et la
+                    tension permanente en huis-clos. Nous avons porté une attention particulière à l’authenticité
+                    visuelle, en intégrant de véritables uniformes et accessoires de gendarmes.
 
                 </p>
             </div>
         </div>
 
-                <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/ordre-2.webp);background-size: contain;"></div>
+        <div class="project">
+            <div class="background-image"
+                style="background-image: url(/images/projets/ordre-2.webp);background-size: contain;"></div>
             <div class="text">
                 <p class="text">
-                    Nous avons pu tourner dans le décor d'un escape game bordelais (que l'on remercie encore chaleureusement), <a href="https://lepassage-escape.fr/" target="_blank">Le Passage</a>, qui offrait un décor réaliste difficile à égaler avec nos moyens. Je me suis chargé de la réalisation, du montage, du mixage sonore et de l’animation du générique.
+                    Nous avons pu tourner dans le décor d'un escape game bordelais (que l'on remercie encore
+                    chaleureusement), <a href="https://lepassage-escape.fr/" target="_blank">Le Passage</a>, qui offrait
+                    un décor réaliste difficile à égaler avec nos moyens. Je me suis chargé de la réalisation, du
+                    montage, du mixage sonore et de l’animation du générique.
                 </p>
             </div>
         </div>
- 
+
         <section id="project-page-title">
             <p>
-                Bien qu'il reste des points d’amélioration, notamment sur l’éclairage, qui a limité la qualité visuelle, et l’écriture, qui aurait gagné à être plus aboutie avec un peu plus de temps, nous sommes malgré tout très fiers du résultat, qui reflète l’intensité et l’immersion que nous souhaitions transmettre. </p>
-               <br> 
-         <p>Avec 
-            <a href="https://fr.linkedin.com/in/simon-daguet-kargl" target="_blank">Simon Daguet-Kargl</a>, 
-            <a href="https://fr.linkedin.com/in/justine-gelis-559989294" target="_blank">Justine Gelis</a>, 
-            <a href="https://fr.linkedin.com/in/ad%C3%A8le-beaune-132985268" target="_blank">Adèle Beaune</a>, 
-            <a href="https://www.linkedin.com/in/no%C3%A9mie-nu%C3%B1ez-b4698b294/" target="_blank">Noémie Nuñez</a>, 
-            l'aide de 
-            <a href="https://www.linkedin.com/in/drissdll/" target="_blank">Driss Loudiyi</a> 
-            et la participation d'
-            <a href="https://fr.linkedin.com/in/alexis-juhel16" target="_blank">Alexis Juhel</a>.</p>
+                Bien qu'il reste des points d’amélioration, notamment sur l’éclairage, qui a limité la qualité visuelle,
+                et l’écriture, qui aurait gagné à être plus aboutie avec un peu plus de temps, nous sommes malgré tout
+                très fiers du résultat, qui reflète l’intensité et l’immersion que nous souhaitions transmettre. </p>
+            <br>
+            <p>Avec
+                <a href="https://fr.linkedin.com/in/simon-daguet-kargl" target="_blank">Simon Daguet-Kargl</a>,
+                <a href="https://fr.linkedin.com/in/justine-gelis-559989294" target="_blank">Justine Gelis</a>,
+                <a href="https://fr.linkedin.com/in/ad%C3%A8le-beaune-132985268" target="_blank">Adèle Beaune</a>,
+                <a href="https://www.linkedin.com/in/no%C3%A9mie-nu%C3%B1ez-b4698b294/" target="_blank">Noémie
+                    Nuñez</a>,
+                l'aide de
+                <a href="https://www.linkedin.com/in/drissdll/" target="_blank">Driss Loudiyi</a>
+                et la participation d'
+                <a href="https://fr.linkedin.com/in/alexis-juhel16" target="_blank">Alexis Juhel</a>.
+            </p>
         </section>
 
 
         <div class="video">
             <p>L'ORDRE - Court-Métrage :</p>
-            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/4Bak-6d3PTU?si=lBMq7seRcOMmuiXB" title="L'Ordre" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 10px"></iframe>
+            <iframe class="videoProject" width="80%" src="https://www.youtube.com/embed/4Bak-6d3PTU?si=lBMq7seRcOMmuiXB"
+                title="L'Ordre" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius: 10px"></iframe>
         </div>
 
         <div class="boutons-back">
@@ -92,7 +111,11 @@
     </section>
 
     <footer>
-        <p>&copy; Tom WAINBERG, 2024</p>
+        <p>&copy; Tom WAINBERG, <span id="date">2025</span> - <a href="/pages/legals.html">Mentions légales</a></p>
     </footer>
+    <script>
+        document.getElementById('date').innerHTML = new Date().getFullYear();
+    </script>
 </body>
+
 </html>
