--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://tomwainberg.fr">
     <meta name="twitter:title" content="Porfolio - Tom Wainberg" />
-    <meta name="twitter:description"
-        content="Portfolio d'un créatif." />
+    <meta name="twitter:description" content="Portfolio d'un créatif." />
 
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -95,7 +94,8 @@
         <h2>je suis ?...</h2>
         <p>
             Photographe à temps perdu, musicien autodidacte, grimpeur en herbe,
-            et actuellement vidéaste chez l'<a href="https://www.lespritcritique.fr/" target="_blank">Esprit Critique</a>.
+            et actuellement vidéaste chez l'<a href="https://www.lespritcritique.fr/" target="_blank">Esprit
+                Critique</a>.
         </p>
         <div>
             <a class="cta" href="/pages/projects.html">tous mes projets</a>
@@ -111,12 +111,12 @@
         <div class="container">
             <a href="/pages/projects/escapadesTemporelles.html" class="card background-image" id="card-escapades">
                 <!-- image du projet(url) & lien vers la page(href) -->
-               <!--<p class="span-project">(02) <span>Escapades Temporelles</span></p>  Titre du projet 
+                <!--<p class="span-project">(02) <span>Escapades Temporelles</span></p>  Titre du projet 
                 <span class="span-competence">écriture</span>-->
             </a>
 
             <a href="/pages/projects/publicActif.html" class="card background-image" id="card-theories">
-                
+
                 <!-- image du projet(url) & lien vers la page(href) 
                 <p class="span-project">(01) <span>Théories animées</span></p>  Titre du projet 
                 <span class="span-competence">motion design</span>  tag du projet -->
@@ -161,7 +161,8 @@
         </div>
 
         <div class="container">
-            <a href="https://www.behance.net/gallery/213382585/Mtropolitain-Parisien" target="_blank" class="card background-image"
+            <a href="https://www.behance.net/gallery/213382585/Mtropolitain-Parisien" target="_blank"
+                class="card background-image"
                 style="background-image: url('/images/photos/miniature-metro.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
@@ -186,7 +187,7 @@
         <ul>
             <!-- lien & titre modifiable -->
             <li><a href="images/WAINBERG_Tom_CV.pdf" target="_blank"><span>+</span>mon joli CV<img
-                src="images/call-click-file.svg" alt="ouvrir en nouvel onglet"></a></li>
+                        src="images/call-click-file.svg" alt="ouvrir en nouvel onglet"></a></li>
             <li><a href="https://www.linkedin.com/in/tom-wainberg" target="_blank"><span>+</span>mon LinkedIn<img
                         src="images/call-click-file.svg" alt="linkedin icon"></a></li> <!-- lien & titre modifiable -->
             <li><a href="https://www.behance.net/tomwainberg" target="_blank"><span>+</span>mon Behance<img
@@ -196,13 +197,11 @@
         </ul>
     </section>
     <footer>
-        <p>&copy; Tom Wainberg, <span id="year"></span></p>
-        <script>
-            const year = new Date().getFullYear();
-            document.getElementById('year').textContent = year;
-        </script>
-        <!-- possibilité de rajouter du contenu textuel -->
+        <p>&copy; Tom WAINBERG, <span id="date">2025</span> - <a href="/pages/legals.html">Mentions légales</a></p>
     </footer>
+    <script>
+        document.getElementById('date').innerHTML = new Date().getFullYear();
+    </script>
     <script>
         const infos = document.querySelectorAll(".card");
         infos.forEach(info => {
